# gege

./: .gitignore  Cargo.toml  INTEGRATION_TESTS.md  LICENSE  README.en.md  README.md  README（副本）.md  build.rs
proto/: pipeline.proto
src/: config.rs  http_server.rs  main.rs  server.rs  ssh_tunnel.rs  task_manager.rs
src/executors/: claude_exe.rs  codex_exe.rs  factory.rs  gemini_exe.rs  hehe_exe.rs  mod.rs  opencode_exe.rs  prompt_wrapper.rs
src/repair/: mod.rs  parser.rs
