[package]
name = "gege"
version = "0.1.0"
edition = "2021"
description = "Proxy layer for AI agent code execution"

[dependencies]
tokio = { version = "1.42", features = ["full"] }
tonic = "0.11"
prost = "0.12"
tokio-stream = "0.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
log = "0.4"
env_logger = "0.11"
anyhow = "1.0"
async-trait = "0.1.89"
reqwest = { version = "0.13.3", features = ["json"] }
axum = "0.8.9"
subtle = "2.6"

[build-dependencies]
protoc-bin-vendored = "3.2.0"
tonic-build = "0.11"
